Align fix on the header

--- a/style.css
+++ b/style.css
@@ -6,12 +6,11 @@ header {
     margin-right: 25px;
 }
 
-a{
-    
-    display: flex;
+a {
     justify-content: center;
     color: black;
     text-decoration: none;
+    align-self: center;
       
 }
 
